tests/errors/args1.br
bf_add :4

#[error: translator 1 7 ]
